# aws-eks-fargate-kubernetes

./: .gitignore  README.md
auth/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  makefile
auth/controllers/: currentUser.go  ping.go  signin.go  signout.go  signup.go
auth/models/: user.go
auth/routes/: routes.go
auth/src/: main.rs
infra/k8s/: deployment.yaml  ingress.yaml  service.yaml
ingress-controller/: alb-ingress-controller.yaml
