[package]
name = "auth"
version = "0.1.0"
authors = ["hom-bahrani <hab0184@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.5.0-rc.1"
gotham_derive = "0.5.0-rc.1"

mime = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
